--- a/src/main/resources/MDS2/instagual/Datos_incorrectos_ventana.html
+++ b/src/main/resources/MDS2/instagual/Datos_incorrectos_ventana.html
@@ -37,7 +37,7 @@
       Si no tiene cuenta puede 
     </vaadin-label>
     <vaadin-button style-name="primary" width="65%" plain-text _id="registrarseB" :center>
-      Registrase 
+      Registrarse 
     </vaadin-button>
     <vaadin-button style-name="primary" width="65%" plain-text _id="invitadoB" :center>
       Entrar como invitado 
