--- a/src/main/resources/MDS2/instagual/Recuperar_password_ventana.html
+++ b/src/main/resources/MDS2/instagual/Recuperar_password_ventana.html
@@ -19,10 +19,10 @@
    </vaadin-vertical-layout>
    <vaadin-vertical-layout spacing="false" size-full margin="false" _id="mitad2" :bottom :center :expand="0.6">
     <vaadin-horizontal-layout spacing="false" size-full :middle>
-     <vaadin-button style-name="tiny danger" width="90%" height="20%" plain-text _id="cancelarB" :middle :center>
+     <vaadin-button icon="fonticon://Vaadin-Icons/e7ad" style-name="tiny danger" width="90%" plain-text _id="cancelarB" :middle :center>
        Cancelar 
      </vaadin-button>
-     <vaadin-button style-name="primary tiny" width="90%" height="20%" plain-text _id="recuperarPasswordB" :middle :center>
+     <vaadin-button style-name="primary tiny" width="90%" plain-text _id="recuperarPasswordB" :middle :center>
        Recuperar contraseña 
      </vaadin-button>
     </vaadin-horizontal-layout>
