--- a/src/main/resources/MDS2/instagual/Usuario_que_dio_me_gusta_ventana.html
+++ b/src/main/resources/MDS2/instagual/Usuario_que_dio_me_gusta_ventana.html
@@ -6,6 +6,80 @@
   <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full></vaadin-vertical-layout>
+  <vaadin-vertical-layout spacing="false" size-full margin="false">
+   <vaadin-vertical-layout spacing="false" height="80%" margin="false" _id="contenedor_barra">
+    <vaadin-horizontal-layout spacing="false" size-full margin>
+     <vaadin-button icon="fonticon://Vaadin-Icons/e7cf" style-name="buttonMenu large" height="110%" plain-text _id="atrasB" :expand="0.1"></vaadin-button>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/Instagual_text.png" width="50%" height="110%" _id="logo_instagualI" :middle :expand="0.3"></vaadin-image>
+     <vaadin-label style-name="colored bold" plain-text _id="meGustaL">
+       Me gusta 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" height="800%" margin="false" _id="comentarios_layout" :center>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/pique_foto_perfil.jpg" style-name="imgRedonda" height-full _id="usuarioI" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL" :middle :expand="0.4">
+       Pique_oficial 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/Usuario_predeterminado.png" style-name="imgRedonda" height-full _id="usuarioI1" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL1" :middle :expand="0.4">
+       Fran__mg 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/defaultPhoto.png" style-name="imgRedonda" height-full _id="usuarioI2" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL2" :middle :expand="0.4">
+       User 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/defaultPhoto.png" style-name="imgRedonda" height-full _id="usuarioI3" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL3" :middle :expand="0.4">
+       Invitado 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/defaultPhoto.png" style-name="imgRedonda" height-full _id="usuarioI4" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL4" :middle :expand="0.4">
+       Ramon 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout style-name="conBordes2" size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/defaultPhoto.png" style-name="imgRedonda" height-full _id="usuarioI5" :expand="0.1"></vaadin-image>
+     <vaadin-label style-name="colored tiny bold" width-full plain-text _id="nombreUsuarioL5" :middle :expand="0.4">
+       Jesus 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="10%"></vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="10%"></vaadin-vertical-layout>
+   <vaadin-vertical-layout size-auto></vaadin-vertical-layout>
+   <vaadin-vertical-layout size-auto></vaadin-vertical-layout>
+   <vaadin-vertical-layout size-auto></vaadin-vertical-layout>
+   <vaadin-vertical-layout size-auto></vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="1%" :middle :center></vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" size-full margin="false" _id="menu_inferior_layout" :bottom :center>
+    <vaadin-horizontal-layout spacing="false" size-full _id="contenedor_horizontal" :bottom>
+     <vaadin-horizontal-layout spacing="false" size-full _id="inicio" :center>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e7ec" style-name="large buttonMenu" size-full plain-text _id="paginaPrincipalB"></vaadin-button>
+     </vaadin-horizontal-layout>
+     <vaadin-horizontal-layout spacing="false" size-full _id="buscar" :center>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e805" style-name="large buttonMenu" size-full plain-text _id="buscarB"></vaadin-button>
+     </vaadin-horizontal-layout>
+     <vaadin-horizontal-layout spacing="false" size-full _id="publicar" :center>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e7bb" style-name="large buttonMenu" size-full plain-text _id="publicarB"></vaadin-button>
+     </vaadin-horizontal-layout>
+     <vaadin-horizontal-layout spacing="false" size-full _id="notificaciones" :center>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e77f" style-name="large buttonMenu" size-full plain-text _id="verNotificacionesActividadesB"></vaadin-button>
+     </vaadin-horizontal-layout>
+     <vaadin-horizontal-layout spacing="false" size-full _id="perfil" :center>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e80d" style-name="large buttonMenu" size-full plain-text _id="verPerfilPropioB"></vaadin-button>
+     </vaadin-horizontal-layout>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
