--- a/src/main/resources/MDS2/instagual/Iniciar_sesion_ventana.html
+++ b/src/main/resources/MDS2/instagual/Iniciar_sesion_ventana.html
@@ -34,7 +34,7 @@
       Si no tiene cuenta puede 
     </vaadin-label>
     <vaadin-button style-name="primary" width="65%" plain-text _id="registrarseB" :center>
-      Registrase 
+      Registrarse 
     </vaadin-button>
     <vaadin-button style-name="primary" width="65%" plain-text _id="invitadoB" :center>
       Entrar como invitado 
