--- a/src/main/resources/MDS2/instagual/Menu_inferior_ventana.html
+++ b/src/main/resources/MDS2/instagual/Menu_inferior_ventana.html
@@ -8,25 +8,13 @@
  <body>
   <vaadin-vertical-layout spacing="false" size-full margin="false">
    <vaadin-vertical-layout spacing="false" height="180%" margin="false" _id="layout_superior" :center></vaadin-vertical-layout>
-   <vaadin-vertical-layout spacing="false" height="20%" margin="false" _id="menu_inferior_layout" :bottom :center>
-    <vaadin-horizontal-layout spacing="false" size-full _id="contenedor_horizontal" :bottom>
-     <vaadin-horizontal-layout spacing="false" size-full _id="inicio" :center>
-      <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/casa_menu.PNG" style-name="imagenClick" size-full _id="paginaPrincipalB"></vaadin-image>
-     </vaadin-horizontal-layout>
-     <vaadin-horizontal-layout spacing="false" size-full _id="buscar" :center>
-      <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/buscar_menu.PNG" style-name="imagenClick" size-full _id="buscarB"></vaadin-image>
-     </vaadin-horizontal-layout>
-     <vaadin-horizontal-layout spacing="false" size-full _id="publicar" :center>
-      <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/foto_menu.PNG" style-name="imagenClick" size-full _id="publicarB"></vaadin-image>
-     </vaadin-horizontal-layout>
-     <vaadin-horizontal-layout spacing="false" size-full _id="notificaciones" :center>
-      <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/corazon_menu.PNG" style-name="imagenClick" size-full _id="verNotificacionesActividadesB"></vaadin-image>
-     </vaadin-horizontal-layout>
-     <vaadin-horizontal-layout spacing="false" size-full _id="perfil" :center>
-      <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/perfil_menu.PNG" style-name="imagenClick" size-full _id="verPerfilPropioB"></vaadin-image>
-     </vaadin-horizontal-layout>
-    </vaadin-horizontal-layout>
-   </vaadin-vertical-layout>
+   <vaadin-horizontal-layout spacing="false" width-full _id="menu_inferior" :bottom :center>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7ec" style-name="borderless large" width-full plain-text _id="paginaPrincipalB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e805" style-name="borderless large" width-full plain-text _id="buscarB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7bb" style-name="borderless large" width-full plain-text _id="publicarB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e77f" style-name="borderless large" width-full plain-text _id="verNotificacionesActividadesB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e80d" style-name="borderless large" width-full plain-text _id="verêrfilPropioB"></vaadin-button>
+   </vaadin-horizontal-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
