--- a/src/main/resources/MDS2/instagual/Publicacion_propia_de_otro_usuario_ventana.html
+++ b/src/main/resources/MDS2/instagual/Publicacion_propia_de_otro_usuario_ventana.html
@@ -6,6 +6,66 @@
   <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full></vaadin-vertical-layout>
+  <vaadin-vertical-layout spacing="false" size-full margin="false">
+   <vaadin-vertical-layout spacing="false" size-full margin="false" _id="contenedor_barra">
+    <vaadin-horizontal-layout size-full margin _id="barra_superior">
+     <vaadin-button icon="fonticon://Vaadin-Icons/e7cf" style-name="large buttonMenu borderless" plain-text _id="atrasB"></vaadin-button>
+     <vaadin-label style-name="colored bold" width="70%" plain-text _id="publicacionL" :middle :right>
+       Publicación 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" height="200%" margin="false" _id="usuarioLayout" :center>
+    <vaadin-horizontal-layout size-full margin>
+     <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/pique_foto_perfil.jpg" style-name="imgRedonda" width="80%" height-full _id="usuarioI" :middle></vaadin-image>
+     <vaadin-vertical-layout size-full margin="false" :right>
+      <vaadin-button style-name="primary miButton2" width-full plain-text _id="compartirB" :bottom>
+        Compartir 
+      </vaadin-button>
+     </vaadin-vertical-layout>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="10%"></vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" height="400%" margin="false" _id="imagen_video_layout" :center>
+    <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/imagenes/pique_publicacion.jpg" size-full _id="elemento_imagen" :center></vaadin-image>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="10%"></vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="10%"></vaadin-vertical-layout>
+   <vaadin-vertical-layout size-auto></vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" size-full _id="comentariosLayout1">
+    <vaadin-horizontal-layout spacing="false" width="50%" height-full>
+     <vaadin-button icon="fonticon://Vaadin-Icons/e77f" style-name="large buttonMenu borderless" width="60%" height-full plain-text _id="meGustasB"></vaadin-button>
+     <vaadin-label style-name="colored small" width="300%" height-full plain-text _id="numeroMeGustaL" :bottom>
+       37897 Me gusta: Busquets, Iniesta, Xavi... 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout spacing="false" size-full _id="comentariosLayout2">
+    <vaadin-horizontal-layout spacing="false" width="50%" height-full>
+     <vaadin-button icon="fonticon://Vaadin-Icons/e767" style-name="large buttonMenu borderless" width="60%" height-full plain-text _id="comentariosB"></vaadin-button>
+     <vaadin-label style-name="colored small" width="300%" height-full plain-text _id="verLosComentariosL" :bottom>
+       Ver los comentarios 
+     </vaadin-label>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout visible="false" spacing="false" size-full margin="false" _id="mencion_layout">
+    <vaadin-button style-name="primary tiny" plain-text _id="eliminarB" :center>
+      Eliminar mención 
+    </vaadin-button>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout height="200%">
+    <vaadin-label size-full plain-text _id="descripcionPublicacionL">
+      Descripción 
+    </vaadin-label>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout width="10%" height="1%" :middle :center></vaadin-vertical-layout>
+   <vaadin-horizontal-layout spacing="false" width-full _id="menu_inferior">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7ec" style-name="borderless large" width-full plain-text _id="paginaPrincipalB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e805" style-name="borderless large" width-full plain-text _id="buscarB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7bb" style-name="borderless large" width-full plain-text _id="publicarB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e77f" style-name="borderless large" width-full plain-text _id="verNotificacionesActividadesB1"></vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e80d" style-name="borderless large" width-full plain-text _id="verêrfilPropioB"></vaadin-button>
+   </vaadin-horizontal-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
